--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gridsome-plugin-netlify-cms": "^1.0.7",
     "gridsome-plugin-pug": "^0.0.3",
     "jstransformer-remark": "^7.0.0",
+    "netlify-cms": "^2.9.5",
     "node-sass": "^4.12.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
