--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -12,6 +12,7 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "displayTitle", widget: "string"}
+      - {label: "Slug", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Body", name: "body", widget: "markdown"}
