サイトデータ更新

--- a/contents/works/HakureiTrialFestExtra/data.yaml
+++ b/contents/works/HakureiTrialFestExtra/data.yaml
@@ -21,7 +21,7 @@ description: |
 
   本サイト用のコントロールパネルも開発しており、作品登録からウェブサイトへの掲載までを全て行うことが出来るプラットフォームとなっています。
   
-  2018年より以前はレンタルサーバ上に展開していましたが、下り帯域制限の超過により一時的にゲームデータがダウンロード不可になるといった事象が起こっていましたが、2019年度より Google Cloud Storage 及び CDN を導入し、以降ダウンロード不可となった時間帯は観測されなくなりました。
+  2018年より以前はレンタルサーバ上に展開していましたが、下り帯域制限の超過により一時的にゲームデータがダウンロード不可になるといった事象が起こっていました。2019年度より Google Cloud Storage 及び CDN を導入し、以降ダウンロード不可となった時間帯は観測されなくなりました。
 earnedExperiences: 
   - Gridsome を用いたコンテンツ展示サイトの構成
   - Google Cloud Storage/CDN を用いた静的コンテンツ配信
