作品情報スキーマを定義

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "vetur.experimental.templateInterpolationService": true
+  "vetur.experimental.templateInterpolationService": true,
+  "yaml.schemas": {
+    "./schemas/work.json": ["/contents/works/**/data.yaml"]
+  }
 }
