--- a/contents/works/HTFCircleControlPanel/data.yaml
+++ b/contents/works/HTFCircleControlPanel/data.yaml
@@ -18,6 +18,7 @@ technologies:
   - JSON Schema
   - quicktype
   - ts-morph
+  - Netlify
 description: |
   東方Project 2次創作ゲームをその場で遊べるイベント「博麗電脳試遊会」のサークル参加者向けコントロールパネルです。
   サークル参加者がサークル情報・ゲーム情報を登録、ゲームデータ・バナー・スクリーンショットのアップロードを行うことが出来ます。また、データ提出締切前であればいつでも情報を変更可能になっています。
@@ -27,8 +28,16 @@ description: |
   「作品データ受付」というタスクから人手をほぼ全て排除し、登録データのエクスポートも少ない手順でできるようにしたことで、登録データに基づく様々なタスクの作業コストの削減を実現できました。
 earnedExperiences: 
   - 再編集可能なWebフォームアプリケーション(文字情報・ファイル登録・画像登録)の開発
-  - JSON Schema, QuickType, ts-morph を用いた、プロジェクト間・言語間で利用可能な型定義生成スクリプトの作成
   - 非エンジニアとスクリプトの双方に親和性のあるスタッフ用内部ツールの開発
+functionalities:
+  - サークル参加登録(アカウント管理)
+  - 各種ゲーム情報(タイトル、ジャンル、説明文、操作説明など)の編集(途中保存可能)
+  - ゲームデータ・スクリーンショット・バナー画像のアップロード
+  - 現在の各種データ入力状況の確認(スタッフ向け機能)
+  - 入力された情報から会場で使用するためのデータをエクスポート(スタッフ向け機能)
+improvements:
+  - JSON Schema, QuickType, ts-morph を用い、プロジェクト間・言語間で一貫して利用可能な型定義を生成
+impact: []
 links:
   - label: 博麗電脳試遊会 公式サイト
     url: https://hakudenkai.netlify.app/
