--- a/contents/works/HakureiTrialFestExtra/data.yaml
+++ b/contents/works/HakureiTrialFestExtra/data.yaml
@@ -15,13 +15,23 @@ technologies:
   - Golang
   - Echo(Golang)
   - Sharp(Node.js)
+  - Netlify
 description: |
   博麗電脳試遊会 EXTRA は、同人ゲーム「東方Project」の二次創作ゲームのオンライン展示イベントです。
   2018年の初開催から、デザイン以外のサイト構築全てを担当しています。
 
   本サイト用のコントロールパネルも開発しており、作品登録からウェブサイトへの掲載までを全て行うことが出来るプラットフォームとなっています。
-  
-  2018年より以前はレンタルサーバ上に展開していましたが、下り帯域制限の超過により一時的にゲームデータがダウンロード不可になるといった事象が起こっていました。2019年度より Google Cloud Storage 及び CDN を導入し、以降ダウンロード不可となった時間帯は観測されなくなりました。
+functionalities:
+  - キャラクターの初登場原作・ゲームの制作状況・ゲームジャンルによる作品絞り込み
+  - ゲームのダウンロード(予めサークル側でアップロードして頂いたものを CDN 経由で配信)
+  - ゲーム詳細ページのシェア、同サークルの他作品へのリンク、販売サイトへのリンクなどを備える作品詳細ページ
+improvements:
+  - ゲームデータ配信を Google Cloud Storage から行うようにし、ダウンロード負荷によるサイトダウンを抑制(2019年度)
+  - サイトのビルド前に登録画像の最適化をスクリプトで行えるようにし、サイト読み込み時間を改善(2020年度)
+impact:
+  - 来場者数 およそ 5000 人(2020年度実績)
+  - 作品詳細ページの総PV数 30000 超(2020年度実績)
+  - 作品ダウンロード回数合計 10000 回超(2020年度実績)
 earnedExperiences: 
   - Gridsome を用いたコンテンツ展示サイトの構成
   - Google Cloud Storage/CDN を用いた静的コンテンツ配信
