--- a/contents/works/TouhouGameJam2020/data.yaml
+++ b/contents/works/TouhouGameJam2020/data.yaml
@@ -22,12 +22,22 @@ description: |
 
   基本的には既に発表している「博麗電脳試遊会EXTRA」の作品登録システム、及びウェブサイトをカスタマイズして公開しています。
   ただ、その前にまとまった休みがあったため、作品登録システムは Vue.js Composition API と Ant Design Vue を用いて6日で完全なリライトを行いました。
-  また、応募を世界中から受け付けるため、作品投稿システム・ウェブサイトの両方を日本語・英語で切り替えられるようにしました。この際、Composition API を用いた簡易な i18n 機能を自作しました(ウェブサイト側は Composition API を入れられなかったので Mixin で実現しました)。
+  また、応募を世界中から受け付けるため、作品投稿システム・ウェブサイトの両方を日本語・英語で切り替えられるようにしました。
 
-  結果として 91 作品(但しプラットフォーム毎の分割登録を含む)が集まりました。短い期間ではありましたが、作品登録フォーム・作品公開サイトは特に問題なく機能しました。
+  短い期間ではありましたが、作品登録フォーム・作品公開サイトは特に問題なく機能しました。
+functionalities:
+  - 博麗電脳試遊会での蓄積コード・経験を応用した作品登録システム・イベント会場サイト
+  - 日本語/英語両対応(翻訳データは協力者からの提供)
+improvements:
+  - Composition API (会場サイトは Mixin) を用いた簡易な i18n 機能を自作(開発期間が短かったため学習コストの抑制を狙った)
+impact:
+  - 登録作品数 91 作品(但しプラットフォーム毎の分割登録を含む)
+  - 来場者数 6000 人以上
+  - 作品ページ総 PV 数 14000 回以上
+  - 作品ダウンロード回数合計 12000回以上 (但し本イベントではゲームデータ配信は運営側では行っていない)
 earnedExperiences: 
   - Vue.js Composition API を用いたフォームアプリ開発
-  - 2言語対応サイトの制作(日本語・英語)
+  - 日本語/英語両対応サイトの制作
 links:
   - label: "東方我楽多叢誌: 「東方ゲームジャム」 スタート！！ 作品エントリーフォームオープン＆テーマ発表！"
     url: https://touhougarakuta.com/news/tohogamejam_theme
