--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.14",
+    "@vue/composition-api": "^1.0.0-beta.22",
     "gridsome": "^0.7.21",
-    "tailwindcss": "^1.8.10",
     "vue-i18n": "^8.21.1",
-    "vue-i18n-composable": "^0.1.0",
+    "vue-i18n-composable": "^0.2.0",
     "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.2",
-    "@types/fs-extra": "^9.0.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/express": "^4.17.9",
+    "@types/fs-extra": "^9.0.6",
     "@types/js-yaml": "^3.12.5",
     "@types/klaw": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "esbuild": "^0.7.2",
+    "autoprefixer": "^9",
+    "esbuild": "^0.8.26",
     "eslint": "^7.9.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
@@ -38,10 +40,13 @@
     "gridsome-plugin-typescript": "^0.4.0",
     "js-yaml": "^3.14.0",
     "klaw": "^3.0.0",
+    "postcss": "^7",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.1.2",
-    "ts-loader": "^8.0.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "ts-loader": "^8.0.12",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.1.3",
     "vue-router": "^3.4.3"
   }
 }
