linter, formatter 周り環境整備

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "optimize": "pnpm optimize:contents-images",
     "optimize:contents-images": "ts-node -P ./scripts/tsconfig.json ./scripts/OptimizeImages.ts",
     "explore": "gridsome explore",
-    "lint": "eslint ./src/**/*.vue ./src/**/*.ts",
-    "lint:fix": "pnpm lint --fix",
+    "lint": "eslint ./src/**/*.{vue,ts}",
+    "lint:fix": "pnpm lint -- --fix",
+    "format": "prettier --write ./src/**/*.{vue,ts}",
+    "fix:all": "pnpm format && pnpm lint:fix",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
@@ -27,15 +29,14 @@
     "@types/fs-extra": "^9.0.6",
     "@types/js-yaml": "^3.12.5",
     "@types/klaw": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^9",
     "esbuild": "^0.8.26",
-    "eslint": "^7.9.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-vue": "^7.3.0",
     "fs-extra": "^9.0.1",
     "gridsome-plugin-typescript": "^0.4.0",
     "js-yaml": "^3.14.0",
