強調したいアセット表示機能を追加

--- a/contents/works/HakureiTrialFestExtra/data.yaml
+++ b/contents/works/HakureiTrialFestExtra/data.yaml
@@ -21,6 +21,9 @@ description: |
   2018年の初開催から、デザイン以外のサイト構築全てを担当しています。
 
   本サイト用のコントロールパネルも開発しており、作品登録からウェブサイトへの掲載までを全て行うことが出来るプラットフォームとなっています。
+highlightAssets: 
+  - title: アーキテクチャ図
+    path: works/htf-architecture.png
 functionalities:
   - キャラクターの初登場原作・ゲームの制作状況・ゲームジャンルによる作品絞り込み
   - ゲームのダウンロード(予めサークル側でアップロードして頂いたものを CDN 経由で配信)
