--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --write ./src/**/*.{vue,ts}",
     "fix:all": "pnpm format && pnpm lint:fix",
     "get:licenses": "license-checker --json",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "prebuild": "test \"$CI\" = true && npx pnpm install --store=node_modules/.pnpm-store || echo skiping pnpm install"
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.22",
@@ -45,6 +46,7 @@
     "js-yaml": "^3.14.0",
     "klaw": "^3.0.0",
     "license-checker": "^25.0.1",
+    "pnpm": "^5.14.1",
     "postcss": "^7",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.1.2",
