--- a/contents/works/ThisSite/data.yaml
+++ b/contents/works/ThisSite/data.yaml
@@ -14,7 +14,7 @@ technologies:
 description: |
   本サイトです。
 
-  Vue.js 及び Tailwind CSS のみを使用して制作しています(カルーセル等も自作しています)。
+  勉強のため、コンポーネントライブラリは導入せず、 Tailwind CSS を活用して制作しています(カルーセル等も自作しています)。大体制作してみて、制作物の指向がアプリではなくウェブサイトならいい感じかもしれない、と感じました。
 
   今まで2回サイトを作ろうとして挫折してきたため、楽しく(楽に)更新できるよう、コンテンツとそれらをレンダリングするコードを最初から可能な限り分離して制作しています。
 
