--- a/contents/works/TouhouGameJam2020/data.yaml
+++ b/contents/works/TouhouGameJam2020/data.yaml
@@ -25,6 +25,9 @@ description: |
   また、応募を世界中から受け付けるため、作品投稿システム・ウェブサイトの両方を日本語・英語で切り替えられるようにしました。
 
   短い期間ではありましたが、作品登録フォーム・作品公開サイトは特に問題なく機能しました。
+highlightAssets: 
+  - title: アーキテクチャ図
+    path: works/thgj2020-architecture.png
 functionalities:
   - 博麗電脳試遊会での蓄積コード・経験を応用した作品登録システム・イベント会場サイト
   - 日本語/英語両対応(翻訳データは協力者からの提供)
