データ更新

--- a/src/assets/embeddedContents/FavoriteTechnologies.yaml
+++ b/src/assets/embeddedContents/FavoriteTechnologies.yaml
@@ -1,7 +1,7 @@
 - name: Vue.js
   experience: 趣味でのWebアプリ開発、実務ではインターンでの講師経験
   abilities:
-    - Typescript + Composition API、及び Firebase 等のバックエンドを用いた Web アプリ開発
+    - Typescript + Composition API、及び Firebase 等のバックエンドを組み合わせた Web アプリ開発
     - Buefy(Bulma), Ant Design Vue, Tailwind CSS と組み合わせたフロントエンド開発
     - provide/inject を活用したビジネスロジックのコード分離
 - name: Typescript
